--- a/src/index.html
+++ b/src/index.html
@@ -11,6 +11,10 @@
 
 <body>
   <h1>Get Your Hot Chicken</h1>
+  <nav>
+    <button id="order-list-btn">show orders</button>
+    <button id="order-form-btn">show order form</button>
+  </nav>
   <article id="container"></article>
 </body>
 
